# llm-from-scratch-note

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
exports/: ch02_text_data_processing.html  ch03_attention_mechanisms.html
notebooks/: ch02_text_data_processing.ipynb  ch03_attention_mechanisms.ipynb
scripts/: export.py  export_vscode_style.py
